fix z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* header */
 .header {
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   top: 30px;
   width: 100%;
 }
